{
  "version": 4,
  "terraform_version": "1.15.8",
  "serial": 58,
  "lineage": "4878a06e-ec34-ed6f-85bf-c1a6061b0d0f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "zpostgres",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:406207085797:internet-gateway/igw-069cd7b66748ec776",
            "id": "igw-069cd7b66748ec776",
            "owner_id": "406207085797",
            "region": "us-east-1",
            "tags": {
              "Name": "zpostgres-igw"
            },
            "tags_all": {
              "Name": "zpostgres-igw"
            },
            "vpc_id": "vpc-092cd8d054c9b6da1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "406207085797",
            "id": "igw-069cd7b66748ec776",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.zpostgres"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:406207085797:route-table/rtb-00c66d7e1bd3c4eb4",
            "id": "rtb-00c66d7e1bd3c4eb4",
            "owner_id": "406207085797",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-069cd7b66748ec776",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "zpostgres-public-route"
            },
            "tags_all": {
              "Name": "zpostgres-public-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-092cd8d054c9b6da1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "406207085797",
            "id": "rtb-00c66d7e1bd3c4eb4",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.zpostgres",
            "aws_vpc.zpostgres"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03ff710a853434a2f",
            "region": "us-east-1",
            "route_table_id": "rtb-00c66d7e1bd3c4eb4",
            "subnet_id": "subnet-0586dead8ab7ea14c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "406207085797",
            "id": "rtbassoc-03ff710a853434a2f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.zpostgres",
            "aws_route_table.public",
            "aws_subnet.public_1",
            "aws_vpc.zpostgres",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02e89d067fa86f80c",
            "region": "us-east-1",
            "route_table_id": "rtb-00c66d7e1bd3c4eb4",
            "subnet_id": "subnet-02d22f619076834e9"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "406207085797",
            "id": "rtbassoc-02e89d067fa86f80c",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.zpostgres",
            "aws_route_table.public",
            "aws_subnet.public_2",
            "aws_vpc.zpostgres",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "zpostgres",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:406207085797:security-group/sg-02882bf77859845d2",
            "description": "Allow PostgreSQL connections",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02882bf77859845d2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "PostgreSQL TCP 5432",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "zpostgres-public-sg",
            "name_prefix": "",
            "owner_id": "406207085797",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "zpostgres-public-sg"
            },
            "tags_all": {
              "Name": "zpostgres-public-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-092cd8d054c9b6da1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "406207085797",
            "id": "sg-02882bf77859845d2",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.zpostgres"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:406207085797:subnet/subnet-0586dead8ab7ea14c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.20.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0586dead8ab7ea14c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "406207085797",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "zpostgres-public-1"
            },
            "tags_all": {
              "Name": "zpostgres-public-1"
            },
            "vpc_id": "vpc-092cd8d054c9b6da1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "406207085797",
            "id": "subnet-0586dead8ab7ea14c",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.zpostgres",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:406207085797:subnet/subnet-02d22f619076834e9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.20.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02d22f619076834e9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "406207085797",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "zpostgres-public-2"
            },
            "tags_all": {
              "Name": "zpostgres-public-2"
            },
            "vpc_id": "vpc-092cd8d054c9b6da1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "406207085797",
            "id": "subnet-02d22f619076834e9",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.zpostgres",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "zpostgres",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:406207085797:vpc/vpc-092cd8d054c9b6da1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-0b46659bde3805ee2",
            "default_route_table_id": "rtb-03d31fed34a0b039d",
            "default_security_group_id": "sg-0d8fbd8d2981b583b",
            "dhcp_options_id": "dopt-0c245e0b2f28782f3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-092cd8d054c9b6da1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03d31fed34a0b039d",
            "owner_id": "406207085797",
            "region": "us-east-1",
            "tags": {
              "Name": "zpostgres-vpc"
            },
            "tags_all": {
              "Name": "zpostgres-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "406207085797",
            "id": "vpc-092cd8d054c9b6da1",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}